correcting tool subpath

--- a/jenkins.yml
+++ b/jenkins.yml
@@ -8,6 +8,7 @@ tool:
       - installSource:
           installers:
           - zip:
+              subdir: "docker"
               url: "https://download.docker.com/linux/static/stable/x86_64/docker-19.03.5.tgz"
   git:
     installations:
